# cpp_quiz

./: .bazeliskrc  .bazelrc  .bazelversion  .clangtidy  BUILD  MODULE.bazel  WORKSPACE
src/: BUILD  calculator.cpp  calculator.h  calculator_test.cpp  debug_test.cpp  debug_utils.cpp  debug_utils.h  demo_main.cpp  demo_main_debug.cpp  q132.cpp  q140.cpp  q31.cpp  q350.cpp  q365.cpp  simple_stack.h  simple_stack_test.cpp  string_utils.cpp  string_utils.h  string_utils_test.cpp
