"""C++ Quiz project with individual components built using Bazel."""

module(
    name = "cpp_quiz",
    version = "1.0.0",
    repo_name = "cpp_quiz",
)

# Bazel skylib for additional utilities
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Google Test for unit testing
bazel_dep(name = "googletest", version = "1.14.0")

# Google Benchmark for performance testing (optional)
bazel_dep(name = "google_benchmark", version = "1.8.3")

bazel_dep(name = "rules_cc", version = "0.1.3")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.1",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
